--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="static/js/index.js"></script>
 </head>
 <body>
+  
 
 <!-- Title and Authors -->
   <section class="hero">
@@ -124,6 +125,7 @@
 </section>
 <!-- End Title and Authors -->
 
+
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -184,10 +186,28 @@
       <div class="columns is-centered">
           <div class="column">
             <div class="content">
-                <h2 class="title is-3">Results</h2>
+                <h2 class="title is-3">ROM Guided CIMPC Enables Diverse Behavior</h2>
             </div>
-            
-
+                <div class="content">
+                  <h3 class="title is-4">Natural Walking</h3>
+                  <p>The normal walking video and the orbit plots</p>
+                </div>
+                <div class="content">
+                  <h3 class="title is-4">Multi-Contact Walking</h3>
+                  <p>All the walking gaits from my recordings</p>
+                </div>
+                <div class="content">
+                  <h3 class="title is-4">Disturbance Recovery</h3>
+                  <p>All the Disturbance Recovery Tests.</p>
+                </div>
+                <div class="content">
+                  <h3 class="title is-4">Robust Locomotion</h3>
+                  <p>Video of robot wlaking over the rough terrain.</p>
+                </div>
+                <div class="content">
+                  <h3 class="title is-4">Highly Dynamic Motion</h3>
+                  <p>Video of the robot falling from 1 meter.</p>
+                </div>
           </div>
         </div>
     </div>
