used real arXiv link for the paper plus tried my best to fill in the citation part

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="publication-links">
                     <!-- Arxiv PDF link -->
                     <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/pdf/2502.15630" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -78,7 +78,7 @@
 
                     <!-- ArXiv abstract Link -->
                     <span class="link-block">
-                      <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                      <a href="https://arxiv.org/abs/2502.15630" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="ai ai-arxiv"></i>
@@ -179,7 +179,7 @@
                   </video>
                   <p><strong>Our proposed method enables multi-contact walking. </strong>
                       HLIP by itself is limited to a single contact mode for each foot since it only considers point feet. The flexibility of CI-MPC allows 
-                      exploration of different contact modes. By leveraging this flexibility, gaits produced by our method considers contact sequences for each collision geometry.
+                      exploration of different contact modes. By leveraging this flexibility, gaits produced by our method considers contact sequences for every collision geometry.
                   </p>
                 </div>
 
@@ -237,12 +237,12 @@
         If you find this work useful, please consider citing it as:
       </p>
       <pre><code>
-@article{esteban2024_rom_cimpc,
+@article{esteban2025_rom_cimpc,
     title={Reduced-Order Model Guided Contact-Implicit Model Predictive Control for Humanoid Locomotion},
     author={Sergio A. Esteban, Vince Kurtz, Adrian B. Ghansah, and Aaron D. Ames},
     year={2025},
-    journal={*****************************},
-    note={Available at: *****************************},
+    journal={arXiv preprint arXiv:2502.15630},
+    note={Available at: \url{https://arxiv.org/abs/2502.15630}},
 }
       </code></pre>
     </div>
