--- a/index.html
+++ b/index.html
@@ -237,12 +237,11 @@
         If you find this work useful, please consider citing it as:
       </p>
       <pre><code>
-@article{esteban2025_rom_cimpc,
-    title={Reduced-Order Model Guided Contact-Implicit Model Predictive Control for Humanoid Locomotion},
-    author={Sergio A. Esteban, Vince Kurtz, Adrian B. Ghansah, and Aaron D. Ames},
-    year={2025},
-    journal={arXiv preprint arXiv:2502.15630},
-    note={Available at: \url{https://arxiv.org/abs/2502.15630}},
+@article{esteban2025reduced,
+  title={Reduced-Order Model Guided Contact-Implicit Model Predictive Control for Humanoid Locomotion},
+  author={Sergio A. Esteban, Vince Kurtz, Adrian B. Ghansah, and Aaron D. Ames},
+  journal={arXiv preprint arXiv:2502.15630},
+  year={2025}
 }
       </code></pre>
     </div>
