added ICRA poster

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             </figure>
             <p>Our control architecture combines the HLIP with CI-MPC. The HLIP tracks user specified velocity commands and then, via inverse kinematics and finite difference, we obtain a state trajectory where after combination produces a trajectory for the legs. CI-MPC tracks this trajectory that is interpolated and passed to low-level control of the robot.</p>
           </div>
-        </div>
-    </div>
+      </div>
+  </div>
 </section>
 <!-- End Control Architecture -->
 
@@ -229,6 +229,21 @@
 <!-- End Results -->
 
 
+<!-- Control Architecture -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="container">
+      <h2 class="title">Poster</h2>
+
+      <iframe  src="static/pdfs/ROM_CIMPC_Poster.pdf" width="100%" height="1000">
+          </iframe>
+        
+      </div>
+    </div>
+</section>
+<!-- End Control Architecture -->
+
+
 <!--BibTex citation -->
   <section class="section" id="Citation">
     <div class="container is-max-desktop content">
@@ -271,5 +286,5 @@
 
     <!-- End of Statcounter Code -->
 
-  </body>
-  </html>
+</body>
+</html>
